--- a/master.cfg
+++ b/master.cfg
@@ -97,7 +97,10 @@ for w in worker_config.iterkeys():
     wc = worker_config[w]
     w = w.encode('ascii', 'ignore')
     passwd = wc[u'password'].encode('ascii', 'ignore')
-    c['workers'].append (worker.Worker(w, passwd))
+    max_builds = None
+    if wc.has_key(u'max-builds'):
+        max_builds = wc['max-builds']
+    c['workers'].append (worker.Worker(w, passwd, max_builds=max_builds))
     if wc.has_key(u'arches'):
         for a in wc[u'arches']:
             a = a.encode('ascii', 'ignore')
