--- a/master.cfg
+++ b/master.cfg
@@ -115,9 +115,12 @@ for w in worker_config.iterkeys():
 
 
 ####### SCHEDULERS
+def not_master_branch_fn(branch):
+    return branch != "master"
 
 checkin = schedulers.AnyBranchScheduler(name="checkin",
                                         treeStableTimer=None,
+                                        change_filter=util.ChangeFilter(branch_fn=not_master_branch_fn),
                                         builderNames=["checkin"])
 build = schedulers.Triggerable(name="build-all-platforms",
                                builderNames=map(lambda x: "build-" + x, flathub_arches))
