Hide some steps on success
This makes for less cluttered displays

--- a/master.cfg
+++ b/master.cfg
@@ -205,6 +205,9 @@ class ProjectLockBuild(Build):
 
 ####### BUILDERS
 
+def hide_on_success(results, s):
+    return results==buildbot.process.results.SUCCESS
+
 flatpak_update_lock = util.WorkerLock("flatpak-update")
 repo_lock = util.MasterLock("repo")
 
@@ -219,9 +222,11 @@ build_factory.addSteps([
               repourl=util.Property('repository'),
               mode='incremental', branch='master'),
     steps.FileDownload(name='downloading public key',
+                       hideStepIf=hide_on_success,
                        mastersrc="flathub.gpg",
                        workerdest="flathub.gpg"),
     steps.ShellSequence(name='initializing repos',
+                        hideStepIf=hide_on_success,
                         haltOnFailure=True,
                         commands=[
                             util.ShellArg(command=['rm', '-rf', 'parent-repo', 'repo', 'repo.tar']),
@@ -230,6 +235,7 @@ build_factory.addSteps([
                             util.ShellArg(command=['ostree', '--repo=repo', '--mode=archive-z2', 'init'])
                         ]),
     steps.ShellCommand(name='set core.parent',
+                       hideStepIf=hide_on_success,
                        command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', util.Interpolate('%(prop:builddir)s/%(prop:appid)s/parent-repo')]),
     steps.ShellCommand(name='pull current revision into parent repo',
                        flunkOnFailure=False, # TODO: Instead only do this if this is the first build
@@ -238,6 +244,7 @@ build_factory.addSteps([
                                 util.Interpolate('runtime/%(prop:appid)s.Debug/%(prop:arch)s/' + flathub_branch),
                                 util.Interpolate('runtime/%(prop:appid)s.Locale/%(prop:arch)s/' + flathub_branch)]),
     steps.ShellCommand(name='adding flathub remote',
+                       hideStepIf=hide_on_success,
                        haltOnFailure=True,
                        command=['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg',
                                 'flathub', flathub_upstream_repo]),
@@ -273,6 +280,7 @@ for ref in deps:
                        haltOnFailure=True,
                        command=['stat', util.Interpolate('repo/refs/heads/app/%(prop:appid)s/%(prop:arch)s/' + flathub_branch)]),
     steps.ShellCommand(name='unset core.parent',
+                       hideStepIf=hide_on_success,
                        command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', '']),
     steps.ShellCommand(name='packaging result',
                        haltOnFailure=True,
@@ -338,12 +346,14 @@ build_app_factory = util.BuildFactory()
 build_app_factory.buildClass = ProjectLockBuild
 build_app_factory.addSteps([
     steps.SetProperties(name="Set app id",
+                        hideStepIf=hide_on_success,
                         properties={
                             'appid': util.Transform(os.path.basename, util.Property('project')),
                             'orig-reason': util.Property('reason'),
                             'reason': util.Transform(os.path.basename, util.Property('project'))
                         }),
     steps.MasterShellCommand(name="Clean up storage on master",
+                             hideStepIf=hide_on_success,
                              haltOnFailure=True,
                              command=['rm', '-rf', util.Interpolate('builds/%(prop:appid)s-%(prop:revision)s')]),
     steps.Trigger(name='Build all platforms',
