Allow force builds on different branches
These will not reach the main repo

--- a/master.cfg
+++ b/master.cfg
@@ -142,18 +142,20 @@ class AppParameter(util.CodebaseParameter):
 
         util.CodebaseParameter.__init__(self, name=name, label=label,
                                         codebase=codebase,
-                                        branch=util.FixedParameter(name="branch", default=""),
+                                        branch=util.StringParameter(name="branch", label='branch:', default="master"),
                                         revision=util.FixedParameter(name="revision", default=""),
                                         repository=util.FixedParameter(name="repository", default=""),
                                         project=util.FixedParameter(name="project", default=""),
                                         **kwargs)
 
     def createSourcestamp(self, properties, kwargs):
+        cb = kwargs.get(self.fullName, [])
+        branch = cb['branch']
         app = kwargs.get('appid', 'noapp')[0]
         return {'project': 'flathub/' + app,
                 'repository': 'https://github.com/flathub/' + app,
                 'revision': '',
-                'branch': 'master'}
+                'branch': branch}
 
 force = schedulers.ForceScheduler(
     name="force",
@@ -207,6 +209,15 @@ class ProjectLockBuild(Build):
 
 def hide_on_success(results, s):
     return results==buildbot.process.results.SUCCESS
+
+def hide_on_skipped(results, s):
+    return results==buildbot.process.results.SKIPPED
+
+def hide_on_success_or_skipped(results, s):
+    return results==buildbot.process.results.SUCCESS or results==buildbot.process.results.SKIPPED
+
+def BuildIsOnMaster(step):
+    return step.build.getProperty ('branch', '') == 'master'
 
 flatpak_update_lock = util.WorkerLock("flatpak-update")
 repo_lock = util.MasterLock("repo")
@@ -284,9 +295,13 @@ for ref in deps:
                        command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', '']),
     steps.ShellCommand(name='packaging result',
                        haltOnFailure=True,
+                       doStepIf=BuildIsOnMaster,
+                       hideStepIf=hide_on_skipped,
                        command=['tar', 'cf', 'repo.tar', 'repo']),
     steps.FileUpload(workersrc='repo.tar',
                      haltOnFailure=True,
+                     doStepIf=BuildIsOnMaster,
+                     hideStepIf=hide_on_skipped,
                      masterdest=util.Interpolate('builds/%(prop:appid)s-%(prop:revision)s/%(prop:arch)s-repo.tar'),
                      blocksize=64*1024),
     steps.ShellCommand(name='clean up',
@@ -353,7 +368,8 @@ build_app_factory.addSteps([
                             'reason': util.Transform(os.path.basename, util.Property('project'))
                         }),
     steps.MasterShellCommand(name="Clean up storage on master",
-                             hideStepIf=hide_on_success,
+                             hideStepIf=hide_on_success_or_skipped,
+                             doStepIf=BuildIsOnMaster,
                              haltOnFailure=True,
                              command=['rm', '-rf', util.Interpolate('builds/%(prop:appid)s-%(prop:revision)s')]),
     steps.Trigger(name='Build all platforms',
@@ -367,6 +383,8 @@ build_app_factory.addSteps([
                   }),
     steps.Trigger(name='Update repository',
                   haltOnFailure=True,
+                  doStepIf=BuildIsOnMaster,
+                  hideStepIf=hide_on_skipped,
                   schedulerNames=['update-repo'],
                   updateSourceStamp=True,
                   waitForFinish=True,
