Update deltas in update-repo
This means we delete old deltas, and create deltas
for the appstream branch.

--- a/master.cfg
+++ b/master.cfg
@@ -353,7 +353,7 @@ update_repo_factory.addSteps([
                                 'repo/', flathub_upstream_repo_path + '/'],
                        locks=[repo_lock.access('exclusive')]),
     steps.ShellCommand(name='update the repo',
-                       command=['flatpak', 'build-update-repo'] + gpg_args + [flathub_upstream_repo_path],
+                       command=['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path],
                        locks=[repo_lock.access('exclusive')])
     ])
 
