clean up repo.tar

--- a/master.cfg
+++ b/master.cfg
@@ -306,7 +306,7 @@ for ref in deps:
                      blocksize=64*1024),
     steps.ShellCommand(name='clean up',
                        alwaysRun=True,
-                       command=['rm', '-rf', '.flatpak-builder/build', 'builddir', 'repo', 'parent-repo'])
+                       command=['rm', '-rf', '.flatpak-builder/build', 'builddir', 'repo', 'repo.tar', 'parent-repo'])
     ])
 
 update_repo_factory = util.BuildFactory()
