--- a/master.cfg
+++ b/master.cfg
@@ -287,6 +287,9 @@ for ref in deps:
                                 '--default-branch', flathub_branch,
                                 '--subject', util.Interpolate('Build %(prop:appid)s at %(prop:revision)s'),
                                 'builddir', util.Interpolate('%(prop:appid)s.json')]),
+    steps.ShellCommand(name='check for AppStream xml',
+                       haltOnFailure=True,
+                       command=['stat', util.Interpolate('builddir/files/share/app-info/xmls/%(prop:appid)s.xml.gz')]),
     steps.ShellCommand(name='check that the right branch was built',
                        haltOnFailure=True,
                        command=['stat', util.Interpolate('repo/refs/heads/app/%(prop:appid)s/%(prop:arch)s/' + flathub_branch)]),
