Make github auth group-based
This means anyone in the flathub org is an admin

--- a/master.cfg
+++ b/master.cfg
@@ -39,7 +39,6 @@ flathub_gpg_key = getConfig('flathub-gpg-key')
 flathub_admin_password = getConfig('admin-password')
 flathub_github_auth_client = getConfig('github-auth-client')
 flathub_github_auth_secret = getConfig('github-auth-secret')
-flathub_github_auth_admin_emails = getConfigv('github-auth-emails')
 flathub_github_change_secret = getConfig('github-change-secret')
 flathub_github_status_token = getConfig('github-status-token')
 
@@ -56,6 +55,7 @@ c['protocols'] = {}
 
 auth = None
 roleMatchers=[]
+adminsRole="admins"
 
 if flathub_admin_password != '':
     auth = util.UserPasswordAuth({"admin": flathub_admin_password})
@@ -63,14 +63,15 @@ if flathub_admin_password != '':
 
 if flathub_github_auth_client != '':
     auth = util.GitHubAuth(flathub_github_auth_client, flathub_github_auth_secret)
-    roleMatchers.append(util.RolesFromEmails(admins=flathub_github_auth_admin_emails))
+    roleMatchers.append(util.RolesFromGroups())
+    adminsRole = 'flathub'
 
 authz = util.Authz(
     allowRules=[
-        util.RebuildBuildEndpointMatcher(role="admins", defaultDeny=True),
-        util.StopBuildEndpointMatcher(role="admins", defaultDeny=True),
-        util.ForceBuildEndpointMatcher(role="admins", defaultDeny=True),
-        util.EnableSchedulerEndpointMatcher(role="admins", defaultDeny=True)
+        util.RebuildBuildEndpointMatcher(role=adminsRole, defaultDeny=True),
+        util.StopBuildEndpointMatcher(role=adminsRole, defaultDeny=True),
+        util.ForceBuildEndpointMatcher(role=adminsRole, defaultDeny=True),
+        util.EnableSchedulerEndpointMatcher(role=adminsRole, defaultDeny=True)
     ],
     roleMatchers=roleMatchers
 )
