Always update the flathub url
This way we can change it later

--- a/master.cfg
+++ b/master.cfg
@@ -260,6 +260,11 @@ build_factory.addSteps([
                        haltOnFailure=True,
                        command=['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg',
                                 'flathub', flathub_upstream_repo]),
+    steps.ShellCommand(name='update flathub remote url',
+                       hideStepIf=hide_on_success,
+                       haltOnFailure=True,
+                       command=['flatpak', '--user', 'remote-modify', '--url='+ flathub_upstream_repo,
+                                'flathub']),
     steps.ShellCommand(name='updating dependencies',
                        haltOnFailure=True,
                        locks=[flatpak_update_lock.access('exclusive')],
