--- a/builders.json.sample
+++ b/builders.json.sample
@@ -2,13 +2,11 @@
     "worker1": {
         "password": "Bn6e82XlJAfe",
         "arches": [ "x86_64", "i386" ],
-        "checkin": true,
         "update-repo": true,
         "max-builds": 3
     },
     "worker2": {
         "password": "n5pHIbZxLV0J",
-        "arches": [ "x86_64", "i386" ],
-        "checkin": true
+        "arches": [ "x86_64", "i386" ]
     }
 }
