--- a/master.cfg
+++ b/master.cfg
@@ -82,7 +82,6 @@ c['protocols']['pb'] = {'port': 9989}
 
 flathub_arches = []
 flathub_arch_workers = {}
-flathub_checkin_workers = []
 flathub_update_workers = []
 
 gpg_args = []
@@ -97,6 +96,8 @@ if flathub_gpg_homedir:
 # a Worker object, specifying a unique worker name and password.  The same
 # worker name and password must be configured on the worker.
 c['workers'] = []
+
+c['workers'].append (worker.LocalWorker('MasterWorker'))
 
 for w in worker_config.iterkeys():
     wc = worker_config[w]
@@ -113,8 +114,6 @@ for w in worker_config.iterkeys():
                 flathub_arches.append(a)
                 flathub_arch_workers[a] = []
             flathub_arch_workers[a].append(w)
-    if wc.has_key(u'checkin'):
-        flathub_checkin_workers.append(w)
     if wc.has_key(u'update-repo'):
         flathub_update_workers.append(w)
 
@@ -422,7 +421,7 @@ status_builders.append('update-repo')
 c['builders'].append(
     util.BuilderConfig(name='Build App',
                        collapseRequests=True,
-                       workernames=flathub_checkin_workers,
+                       workernames=['MasterWorker'],
                        factory=build_app_factory))
 
 ####### BUILDBOT SERVICES
