--- a/master.cfg
+++ b/master.cfg
@@ -120,7 +120,7 @@ for w in worker_config.iterkeys():
 
 ####### SCHEDULERS
 checkin = schedulers.SingleBranchScheduler(name="checkin",
-                                           treeStableTimer=None,
+                                           treeStableTimer=10,
                                            change_filter=util.ChangeFilter(branch='master'),
                                            builderNames=["Build App"])
 build = schedulers.Triggerable(name="build-all-platforms",
