--- a/master.cfg
+++ b/master.cfg
@@ -11,7 +11,7 @@ from twisted.internet import defer
 import buildbot
 import subprocess, re, json
 import os.path
-
+from buildbot.steps.worker import CompositeStepMixin
 
 f = open('config.json', 'r')
 config = json.loads(f.read ())
@@ -153,7 +153,7 @@ class AppParameter(util.CodebaseParameter):
         branch = cb['branch']
         app = kwargs.get('appid', 'noapp')[0]
         return {'project': 'flathub/' + app,
-                'repository': 'https://github.com/flathub/' + app,
+                'repository': flathub_github_uri + app,
                 'revision': '',
                 'branch': branch}
 
@@ -226,6 +226,36 @@ repo_lock = util.MasterLock("repo")
 # what steps, and which workers can execute them.  Note that any particular build will
 # only take place on one worker.
 
+class MaybeAddArchSteps(CompositeStepMixin, steps.BuildStep):
+
+    parms = steps.BuildStep.parms + ['steps']
+    steps = None
+
+    def __init__(self, **kwargs):
+        for p in self.__class__.parms:
+            if p in kwargs:
+                setattr(self, p, kwargs.pop(p))
+
+        steps.BuildStep.__init__(self, **kwargs)
+
+    @defer.inlineCallbacks
+    def run(self):
+        content = yield self.getFileContentFromWorker("flathub.json")
+        skip = False
+        if content != None:
+            flathub_config = json.loads(content)
+            if flathub_config.has_key("skip-arches"):
+                skip_arches = flathub_config["skip-arches"]
+                arch = self.build.getProperty ('arch', '')
+                if arch in skip_arches:
+                    skip = True
+
+        if skip:
+            defer.returnValue(buildbot.process.results.SKIPPED)
+        else:
+            self.build.addStepsAfterCurrentStep(self.steps)
+            defer.returnValue(buildbot.process.results.SUCCESS)
+
 build_factory = util.BuildFactory()
 build_factory.workdir = util.Property('appid')
 build_factory.addSteps([
@@ -244,7 +274,10 @@ build_factory.addSteps([
                             util.ShellArg(command=['ostree', '--repo=parent-repo', '--mode=archive-z2', 'init']),
                             util.ShellArg(command=['ostree', '--repo=parent-repo', 'remote', 'add', '--gpg-import=flathub.gpg', 'upstream', flathub_upstream_repo]),
                             util.ShellArg(command=['ostree', '--repo=repo', '--mode=archive-z2', 'init'])
-                        ]),
+                        ])
+])
+build_factory.addStep(MaybeAddArchSteps(name="Should we build",
+                                    steps=[
     steps.ShellCommand(name='set core.parent',
                        hideStepIf=hide_on_success,
                        command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', util.Interpolate('%(prop:builddir)s/%(prop:appid)s/parent-repo')]),
@@ -300,7 +333,9 @@ for ref in deps:
                        command=['stat', util.Interpolate('repo/refs/heads/app/%(prop:appid)s/%(prop:arch)s/' + flathub_branch)]),
     steps.ShellCommand(name='unset core.parent',
                        hideStepIf=hide_on_success,
-                       command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', '']),
+                       command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', ''])
+]))
+build_factory.addSteps([
     steps.ShellCommand(name='packaging result',
                        haltOnFailure=True,
                        doStepIf=BuildIsOnMaster,
@@ -315,7 +350,7 @@ for ref in deps:
     steps.ShellCommand(name='clean up',
                        alwaysRun=True,
                        command=['rm', '-rf', '.flatpak-builder/build', 'builddir', 'repo', 'repo.tar', 'parent-repo'])
-    ])
+])
 
 update_repo_factory = util.BuildFactory()
 update_repo_factory.addStep(steps.ShellCommand(name='clean old repo', command=['rm', '-rf', 'repo']))
@@ -472,11 +507,6 @@ if flathub_github_change_secret != "":
             'strict': True
         }
     }
-else:
-    c['change_source'].append(changes.GitPoller(
-        flathub_github_uri,
-        workdir='gitpoller-workdir', branches=True,
-        pollinterval=300))
 
 ####### DB URL
 
