--- a/master.cfg
+++ b/master.cfg
@@ -320,7 +320,7 @@ for ref in deps:
                                 util.Property('arch')]),
     steps.ShellCommand(name='build manifest',
                        haltOnFailure=True,
-                       command=['flatpak-builder', '--force-clean', '--sandbox',
+                       command=['flatpak-builder', '-v', '--force-clean', '--sandbox',
                                 '--arch', util.Property('arch'), '--repo', 'repo',
                                 '--default-branch', flathub_branch,
                                 '--subject', util.Interpolate('Build %(prop:appid)s at %(prop:revision)s'),
