Try to fix the rofiles-fuse issue
We force unmount any rofile-fuse mounts before building.
Hopefully this fixes the issues we're seeing.

--- a/master.cfg
+++ b/master.cfg
@@ -318,6 +318,9 @@ for ref in deps:
 """,
                                 util.Interpolate('%(prop:appid)s.json'),
                                 util.Property('arch')]),
+    steps.ShellCommand(name='clean up rofiles-fuse',
+                       haltOnFailure=True,
+                       command='for i in .flatpak-builder/rofiles/rofiles-*/; do fusermount -u $i; done || true'),
     steps.ShellCommand(name='build manifest',
                        haltOnFailure=True,
                        command=['flatpak-builder', '-v', '--force-clean', '--sandbox',
