--- a/master.cfg
+++ b/master.cfg
@@ -323,6 +323,7 @@ for ref in deps:
                        command='for i in .flatpak-builder/rofiles/rofiles-*/; do fusermount -u $i; done || true'),
     steps.ShellCommand(name='build manifest',
                        haltOnFailure=True,
+                       timeout=3000,
                        command=['flatpak-builder', '-v', '--force-clean', '--sandbox',
                                 '--arch', util.Property('arch'), '--repo', 'repo',
                                 '--default-branch', flathub_branch,
