Only build repos with a dot in
This means we can have non-app repos, such as the buildbot config
itself. We do this by regexp matching on the project name.

--- a/master.cfg
+++ b/master.cfg
@@ -121,7 +121,8 @@ for w in worker_config.iterkeys():
 ####### SCHEDULERS
 checkin = schedulers.SingleBranchScheduler(name="checkin",
                                            treeStableTimer=10,
-                                           change_filter=util.ChangeFilter(branch='master'),
+                                           change_filter=util.ChangeFilter(branch='master',
+                                                                           project_re=r'^flathub/.*\..*'),
                                            builderNames=["Build App"])
 build = schedulers.Triggerable(name="build-all-platforms",
                                builderNames=map(lambda x: "build-" + x, flathub_arches))
