Pull submodules when checking out manifest

--- a/master.cfg
+++ b/master.cfg
@@ -262,7 +262,7 @@ build_factory.workdir = util.Property('appid')
 build_factory.addSteps([
     steps.Git(name="checkout manifest",
               repourl=util.Property('repository'),
-              mode='incremental', branch='master'),
+              mode='incremental', branch='master', submodules=True),
     steps.FileDownload(name='downloading public key',
                        hideStepIf=hide_on_success,
                        mastersrc="flathub.gpg",
