Setarch to the right arch
This way autodetection will work better, hopefully

--- a/master.cfg
+++ b/master.cfg
@@ -325,7 +325,7 @@ for ref in deps:
     steps.ShellCommand(name='build manifest',
                        haltOnFailure=True,
                        timeout=3000,
-                       command=['flatpak-builder', '-v', '--force-clean', '--sandbox',
+                       command=['setarch', util.Property('setarch'), 'flatpak-builder', '-v', '--force-clean', '--sandbox',
                                 '--arch', util.Property('arch'), '--repo', 'repo',
                                 '--default-branch', flathub_branch,
                                 '--subject', util.Interpolate('Build %(prop:appid)s at %(prop:revision)s'),
@@ -446,11 +446,18 @@ c['builders'] = []
 
 status_builders = []
 
+setarch = {
+    'x86_64': 'x86_64',
+    'i386': 'i386',
+    'arm': 'armv7',
+    'aarch64': 'aarch64'
+}
+
 for arch in flathub_arches:
     c['builders'].append(
         util.BuilderConfig(name='build-' + arch,
                            workernames=flathub_arch_workers[arch],
-                           properties={'arch': arch},
+                           properties={'arch': arch, 'setarch': setarch[arch] },
                            factory=build_factory))
     status_builders.append('build-' + arch)
 c['builders'].append(
