--- a/master.cfg
+++ b/master.cfg
@@ -449,7 +449,7 @@ status_builders = []
 setarch = {
     'x86_64': 'x86_64',
     'i386': 'i386',
-    'arm': 'armv7',
+    'arm': 'armv7l',
     'aarch64': 'aarch64'
 }
 
