Use linux32/64 instead of full arch

--- a/master.cfg
+++ b/master.cfg
@@ -447,10 +447,10 @@ c['builders'] = []
 status_builders = []
 
 setarch = {
-    'x86_64': 'x86_64',
-    'i386': 'i386',
-    'arm': 'armv7l',
-    'aarch64': 'aarch64'
+    'x86_64': 'linux64',
+    'i386': 'linux32',
+    'arm': 'linux32',
+    'aarch64': 'linux64'
 }
 
 for arch in flathub_arches:
