Allow specifying a custom repository when force building

--- a/master.cfg
+++ b/master.cfg
@@ -145,7 +145,7 @@ class AppParameter(util.CodebaseParameter):
                                         codebase=codebase,
                                         branch=util.StringParameter(name="branch", label='branch:', default="master"),
                                         revision=util.FixedParameter(name="revision", default=""),
-                                        repository=util.FixedParameter(name="repository", default=""),
+                                        repository=util.StringParameter(name="repository", label='repo uri:', default=""),
                                         project=util.FixedParameter(name="project", default=""),
                                         **kwargs)
 
@@ -153,8 +153,12 @@ class AppParameter(util.CodebaseParameter):
         cb = kwargs.get(self.fullName, [])
         branch = cb['branch']
         app = kwargs.get('appid', 'noapp')[0]
+        repo_uri = cb['repository']
+        if not repo_uri:
+            repo_uri = flathub_github_uri + app
+
         return {'project': 'flathub/' + app,
-                'repository': flathub_github_uri + app,
+                'repository': repo_uri,
                 'revision': '',
                 'branch': branch}
 
@@ -217,8 +221,12 @@ def hide_on_skipped(results, s):
 def hide_on_success_or_skipped(results, s):
     return results==buildbot.process.results.SUCCESS or results==buildbot.process.results.SKIPPED
 
-def BuildIsOnMaster(step):
-    return step.build.getProperty ('branch', '') == 'master'
+# Official builds are master branch on the canonical flathub git repo
+def BuildIsOfficial(step):
+    appid = step.build.getProperty ('appid', '')
+    branch = step.build.getProperty ('branch', '')
+    repo_uri = step.build.getProperty ('repository', '')
+    return repo_uri == flathub_github_uri + appid and branch == 'master'
 
 flatpak_update_lock = util.WorkerLock("flatpak-update")
 repo_lock = util.MasterLock("repo")
@@ -343,12 +351,12 @@ for ref in deps:
 build_factory.addSteps([
     steps.ShellCommand(name='packaging result',
                        haltOnFailure=True,
-                       doStepIf=BuildIsOnMaster,
+                       doStepIf=BuildIsOfficial,
                        hideStepIf=hide_on_skipped,
                        command=['tar', 'cf', 'repo.tar', 'repo']),
     steps.FileUpload(workersrc='repo.tar',
                      haltOnFailure=True,
-                     doStepIf=BuildIsOnMaster,
+                     doStepIf=BuildIsOfficial,
                      hideStepIf=hide_on_skipped,
                      masterdest=util.Interpolate('builds/%(prop:appid)s-%(prop:revision)s/%(prop:arch)s-repo.tar'),
                      blocksize=64*1024),
@@ -417,7 +425,7 @@ build_app_factory.addSteps([
                         }),
     steps.MasterShellCommand(name="Clean up storage on master",
                              hideStepIf=hide_on_success_or_skipped,
-                             doStepIf=BuildIsOnMaster,
+                             doStepIf=BuildIsOfficial,
                              haltOnFailure=True,
                              command=['rm', '-rf', util.Interpolate('builds/%(prop:appid)s-%(prop:revision)s')]),
     steps.Trigger(name='Build all platforms',
@@ -431,7 +439,7 @@ build_app_factory.addSteps([
                   }),
     steps.Trigger(name='Update repository',
                   haltOnFailure=True,
-                  doStepIf=BuildIsOnMaster,
+                  doStepIf=BuildIsOfficial,
                   hideStepIf=hide_on_skipped,
                   schedulerNames=['update-repo'],
                   updateSourceStamp=True,
