Handle building runtimes as well as apps

--- a/master.cfg
+++ b/master.cfg
@@ -291,9 +291,17 @@ build_factory.addStep(MaybeAddArchSteps(name="Should we build",
                        hideStepIf=hide_on_success,
                        command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', util.Interpolate('%(prop:builddir)s/%(prop:appid)s/parent-repo')]),
     steps.ShellCommand(name='pull current revision into parent repo',
+                       hideStepIf=True,
                        flunkOnFailure=False, # TODO: Instead only do this if this is the first build
                        command=['ostree', '--repo=parent-repo', 'pull', '--mirror', 'upstream',
                                 util.Interpolate('app/%(prop:appid)s/%(prop:arch)s/' + flathub_branch),
+                                util.Interpolate('runtime/%(prop:appid)s.Debug/%(prop:arch)s/' + flathub_branch),
+                                util.Interpolate('runtime/%(prop:appid)s.Locale/%(prop:arch)s/' + flathub_branch)]),
+    steps.ShellCommand(name='pull current revision into parent repo',
+                       hideStepIf=True,
+                       flunkOnFailure=False, # TODO: Instead only do this if this is the first build
+                       command=['ostree', '--repo=parent-repo', 'pull', '--mirror', 'upstream',
+                                util.Interpolate('runtime/%(prop:appid)s/%(prop:arch)s/' + flathub_branch),
                                 util.Interpolate('runtime/%(prop:appid)s.Debug/%(prop:arch)s/' + flathub_branch),
                                 util.Interpolate('runtime/%(prop:appid)s.Locale/%(prop:arch)s/' + flathub_branch)]),
     steps.ShellCommand(name='adding flathub remote',
@@ -343,7 +351,7 @@ for ref in deps:
                        command=['stat', util.Interpolate('builddir/files/share/app-info/xmls/%(prop:appid)s.xml.gz')]),
     steps.ShellCommand(name='check that the right branch was built',
                        haltOnFailure=True,
-                       command=['stat', util.Interpolate('repo/refs/heads/app/%(prop:appid)s/%(prop:arch)s/' + flathub_branch)]),
+                       command=['stat', util.Interpolate('repo/refs/heads/*/%(prop:appid)s/%(prop:arch)s/' + flathub_branch)]),
     steps.ShellCommand(name='unset core.parent',
                        hideStepIf=hide_on_success,
                        command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', ''])
