Fix branch check
We need to use a shell to expand the glob

--- a/master.cfg
+++ b/master.cfg
@@ -351,7 +351,7 @@ for ref in deps:
                        command=['stat', util.Interpolate('builddir/files/share/app-info/xmls/%(prop:appid)s.xml.gz')]),
     steps.ShellCommand(name='check that the right branch was built',
                        haltOnFailure=True,
-                       command=['stat', util.Interpolate('repo/refs/heads/*/%(prop:appid)s/%(prop:arch)s/' + flathub_branch)]),
+                       command=util.Interpolate('stat repo/refs/heads/*/%(prop:appid)s/%(prop:arch)s/' + flathub_branch)),
     steps.ShellCommand(name='unset core.parent',
                        hideStepIf=hide_on_success,
                        command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', ''])
