Enable source bundling

--- a/master.cfg
+++ b/master.cfg
@@ -342,6 +342,7 @@ for ref in deps:
                        haltOnFailure=True,
                        timeout=3000,
                        command=['setarch', util.Property('setarch'), 'flatpak-builder', '-v', '--force-clean', '--sandbox',
+                                '--bundle-sources',
                                 '--arch', util.Property('arch'), '--repo', 'repo',
                                 '--default-branch', flathub_branch,
                                 '--subject', util.Interpolate('Build %(prop:appid)s at %(prop:revision)s'),
