Revert "Enable screenshot mirroring"
We don't have a new enough appstream-glib on the builder yet

This reverts commit 1c9dba52b3bc04240ba67904b96ba305f99735e4.

--- a/master.cfg
+++ b/master.cfg
@@ -282,8 +282,7 @@ build_factory.addSteps([
                             util.ShellArg(command=['rm', '-rf', 'parent-repo', 'repo', 'repo.tar']),
                             util.ShellArg(command=['ostree', '--repo=parent-repo', '--mode=archive-z2', 'init']),
                             util.ShellArg(command=['ostree', '--repo=parent-repo', 'remote', 'add', '--gpg-import=flathub.gpg', 'upstream', flathub_upstream_repo]),
-                            util.ShellArg(command=['ostree', '--repo=repo', '--mode=archive-z2', 'init']),
-                            util.ShellArg(command=['mkdir', '-p', 'repo/screenshots'])
+                            util.ShellArg(command=['ostree', '--repo=repo', '--mode=archive-z2', 'init'])
                         ])
 ])
 build_factory.addStep(MaybeAddArchSteps(name="Should we build",
@@ -343,7 +342,7 @@ for ref in deps:
                        haltOnFailure=True,
                        timeout=3000,
                        command=['setarch', util.Property('setarch'), 'flatpak-builder', '-v', '--force-clean', '--sandbox',
-                                '--bundle-sources', '--mirror-screenshots-url=https://flathub.org/repo/screenshots',
+                                '--bundle-sources',
                                 '--arch', util.Property('arch'), '--repo', 'repo',
                                 '--default-branch', flathub_branch,
                                 '--subject', util.Interpolate('Build %(prop:appid)s at %(prop:revision)s'),
@@ -356,10 +355,7 @@ for ref in deps:
                        command=util.Interpolate('test ! -d repo/refs/heads/app -o -f repo/refs/heads/app/%(prop:appid)s/%(prop:arch)s/' + flathub_branch)),
     steps.ShellCommand(name='unset core.parent',
                        hideStepIf=hide_on_success,
-                       command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', '']),
-    steps.ShellCommand(name='copy screenshots',
-                       hideStepIf=hide_on_success,
-                       command=['cp', '-rd', 'builddir/screenshots/', 'repo/screenshots/'])
+                       command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', ''])
 ]))
 build_factory.addSteps([
     steps.ShellCommand(name='packaging result',
