Actually copy the mirrored screenshots in-place.

--- a/master.cfg
+++ b/master.cfg
@@ -402,6 +402,8 @@ update_repo_factory.addSteps([
     steps.ShellCommand(name='Ensure files are readable', command=['chmod', '-R', 'a+rX', 'repo']),
     steps.ShellCommand(name='rsync objects and deltas',
                        command=['rsync', '-rltv', '--ignore-existing',
+                                '--include=/screenshots',
+                                '--include=/screenshots/**',
                                 '--include=/objects',
                                 '--include=/objects/**',
                                 '--include=/deltas',
