Drop the setarch calls (flatpak-builder does this now)

--- a/master.cfg
+++ b/master.cfg
@@ -342,7 +342,7 @@ for ref in deps:
     steps.ShellCommand(name='build manifest',
                        haltOnFailure=True,
                        timeout=3000,
-                       command=['setarch', util.Property('setarch'), 'flatpak-builder', '-v', '--force-clean', '--sandbox',
+                       command=['flatpak-builder', '-v', '--force-clean', '--sandbox',
                                 '--bundle-sources', '--mirror-screenshots-url=https://flathub.org/repo/screenshots',
                                 '--arch', util.Property('arch'), '--repo', 'repo',
                                 '--default-branch', flathub_branch,
@@ -469,18 +469,11 @@ c['builders'] = []
 
 status_builders = []
 
-setarch = {
-    'x86_64': 'linux64',
-    'i386': 'linux32',
-    'arm': 'linux32',
-    'aarch64': 'linux64'
-}
-
 for arch in flathub_arches:
     c['builders'].append(
         util.BuilderConfig(name='build-' + arch,
                            workernames=flathub_arch_workers[arch],
-                           properties={'arch': arch, 'setarch': setarch[arch] },
+                           properties={'arch': arch},
                            factory=build_factory))
     status_builders.append('build-' + arch)
 c['builders'].append(
