Only build sources on one builder

--- a/master.cfg
+++ b/master.cfg
@@ -343,8 +343,7 @@ for ref in deps:
                        haltOnFailure=True,
                        timeout=3000,
                        command=['flatpak-builder', '-v', '--force-clean', '--sandbox',
-                                '--bundle-sources', '--mirror-screenshots-url=https://flathub.org/repo/screenshots',
-                                '--arch', util.Property('arch'), '--repo', 'repo',
+                                util.Property('extra-fb-args'), , '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
                                 '--default-branch', flathub_branch,
                                 '--subject', util.Interpolate('Build %(prop:appid)s at %(prop:revision)s'),
                                 'builddir', util.Interpolate('%(prop:appid)s.json')]),
@@ -470,10 +469,14 @@ c['builders'] = []
 status_builders = []
 
 for arch in flathub_arches:
+    extra_fb_args: ['--arch', arch]
+    if arch == 'x86_64':
+        extra_fb_args = extra_fb_args + ['--bundle-sources']
+
     c['builders'].append(
         util.BuilderConfig(name='build-' + arch,
                            workernames=flathub_arch_workers[arch],
-                           properties={'arch': arch},
+                           properties={'arch': arch, 'extra-fb-args': extra_fb_args },
                            factory=build_factory))
     status_builders.append('build-' + arch)
 c['builders'].append(
