Tweak the copying of the screenshots

--- a/master.cfg
+++ b/master.cfg
@@ -358,7 +358,7 @@ for ref in deps:
                        command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', '']),
     steps.ShellCommand(name='copy screenshots',
                        hideStepIf=hide_on_success,
-                       command=['cp', '-rd', 'builddir/screenshots/', 'repo/screenshots/'])
+                       command=['cp', '-r', 'builddir/screenshots', 'repo/'])
 ]))
 build_factory.addSteps([
     steps.ShellCommand(name='packaging result',
