--- a/master.cfg
+++ b/master.cfg
@@ -343,7 +343,7 @@ for ref in deps:
                        haltOnFailure=True,
                        timeout=3000,
                        command=['flatpak-builder', '-v', '--force-clean', '--sandbox',
-                                util.Property('extra-fb-args'), , '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
+                                util.Property('extra-fb-args'), '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
                                 '--default-branch', flathub_branch,
                                 '--subject', util.Interpolate('Build %(prop:appid)s at %(prop:revision)s'),
                                 'builddir', util.Interpolate('%(prop:appid)s.json')]),
