--- a/master.cfg
+++ b/master.cfg
@@ -469,7 +469,7 @@ c['builders'] = []
 status_builders = []
 
 for arch in flathub_arches:
-    extra_fb_args: ['--arch', arch]
+    extra_fb_args = ['--arch', arch]
     if arch == 'x86_64':
         extra_fb_args = extra_fb_args + ['--bundle-sources']
 
