--- a/master.cfg
+++ b/master.cfg
@@ -29,6 +29,7 @@ def getConfigv(name, default=[]):
         return res
     return default
 
+flathub_buildbot_port = getConfig('buildbot-port', 8010)
 flathub_github_uri = getConfig('github-uri')
 flathub_buildbot_uri = getConfig('buildbot-uri')
 flathub_upstream_repo = getConfig('flathub-repo')
@@ -520,7 +521,7 @@ c['titleURL'] = 'https://github.com/flatpak/flathub'
 
 c['buildbotURL'] = flathub_buildbot_uri
 
-c['www'] = dict(port=8010,
+c['www'] = dict(port=flathub_buildbot_port,
                 plugins=dict(waterfall_view={}, console_view={}),
                 authz=authz)
 if auth:
