Fix runtime updates
flatpak install no longer fails if its already installed, so always
run both install and update.

--- a/master.cfg
+++ b/master.cfg
@@ -332,7 +332,8 @@ sdk_ref = '%s/%s/%s' % (sdk, arch, version)
 deps = [platform_ref, sdk_ref]
 for ref in deps:
   if subprocess.call(['flatpak', 'install', '--user', 'flathub', ref]) != 0:
-    if subprocess.call(['flatpak', 'update', '--user', ref]):
+      sys.exit(1)
+  if subprocess.call(['flatpak', 'update', '--user', ref]):
       sys.exit(1)
 """,
                                 util.Interpolate('%(prop:appid)s.json'),
