--- a/master.cfg
+++ b/master.cfg
@@ -18,7 +18,10 @@ config = json.loads(f.read ())
 
 def getConfig(name, default=""):
     if config.has_key(name):
-        return config[name].encode('ascii', 'ignore')
+        v = config[name]
+        if isinstance(v,int):
+            return v
+        return v.encode('ascii', 'ignore')
     return default
 
 def getConfigv(name, default=[]):
@@ -30,6 +33,7 @@ def getConfigv(name, default=[]):
     return default
 
 flathub_buildbot_port = getConfig('buildbot-port', 8010)
+flathub_num_master_workers = getConfig('num-master-workers', 4)
 flathub_github_uri = getConfig('github-uri')
 flathub_buildbot_uri = getConfig('buildbot-uri')
 flathub_upstream_repo = getConfig('flathub-repo')
@@ -98,7 +102,13 @@ if flathub_gpg_homedir:
 # worker name and password must be configured on the worker.
 c['workers'] = []
 
-c['workers'].append (worker.LocalWorker('MasterWorker'))
+# For whatever reason, max-builds doesn't seem to work, so we only ever run one build.
+# To hack around this we create multiple master workers
+local_workers = []
+for i in range(1,flathub_num_master_workers):
+    name = 'MasterWorker%d' % i
+    c['workers'].append (worker.LocalWorker(name))
+    local_workers.append(name)
 
 for w in worker_config.iterkeys():
     wc = worker_config[w]
@@ -489,7 +499,7 @@ status_builders.append('update-repo')
 c['builders'].append(
     util.BuilderConfig(name='Build App',
                        collapseRequests=True,
-                       workernames=['MasterWorker'],
+                       workernames=local_workers,
                        factory=build_app_factory))
 
 ####### BUILDBOT SERVICES
