Implement only-arches, minor cleanups to skip-arches

--- a/master.cfg
+++ b/master.cfg
@@ -263,11 +263,14 @@ class MaybeAddArchSteps(CompositeStepMixin, steps.BuildStep):
         skip = False
         if content != None:
             flathub_config = json.loads(content)
-            if flathub_config.has_key("skip-arches"):
-                skip_arches = flathub_config["skip-arches"]
-                arch = self.build.getProperty ('arch', '')
-                if arch in skip_arches:
-                    skip = True
+            arch = self.build.getProperty ('arch', '')
+
+            skip_arches = flathub_config.get("skip-arches")
+            only_arches = flathub_config.get("only-arches")
+            if skip_arches is not None and arch in skip_arches:
+                skip = True
+            if only_arches is not None and arch not in only_arches:
+                skip = True
 
         if skip:
             defer.returnValue(buildbot.process.results.SKIPPED)
