--- a/master.cfg
+++ b/master.cfg
@@ -131,6 +131,7 @@ for w in worker_config.iterkeys():
 
 ####### SCHEDULERS
 checkin = schedulers.SingleBranchScheduler(name="checkin",
+                                           treeStableTimer=10,
                                            change_filter=util.ChangeFilter(branch='master',
                                                                            project_re=r'^flathub/.*\..*\..*'),
                                            builderNames=["Build App"])
