strip multi-line /* */ comments from .json recipes
We parse the flatpak-builder .json files to ensure the buildbots
have updated the right runtimes before we build. Python json does
not accept /* C comments */ like flatpak-builder does (as a
historical accident of json-glib), which this regexp strips out.

--- a/master.cfg
+++ b/master.cfg
@@ -332,7 +332,8 @@ build_factory.addStep(MaybeAddArchSteps(name="Should we build",
                        command=['python', '-c',
 """
 import sys, json, re, subprocess
-j = json.loads(re.sub( r'/\*.*?\*/', '', open(sys.argv[1], 'r').read()))
+j = json.loads(re.sub(r'/\*.*?\*/', '', open(sys.argv[1], 'r').read(),
+                      flags=re.DOTALL))
 runtime = j['runtime']
 sdk = j['sdk']
 version = j['runtime-version']
