I'm great at regexps /s \s

--- a/master.cfg
+++ b/master.cfg
@@ -335,7 +335,7 @@ build_factory.addStep(MaybeAddArchSteps(name="Should we build",
                        command=['python', '-c',
 """
 import sys, json, re, subprocess
-j = json.loads(re.sub(r'(^|/s)/\*.*?\*/', '', open(sys.argv[1], 'r').read(),
+j = json.loads(re.sub(r'(^|\s)/\*.*?\*/', '', open(sys.argv[1], 'r').read(),
                       flags=re.DOTALL))
 runtime = j['runtime']
 sdk = j['sdk']
