--- a/master.cfg
+++ b/master.cfg
@@ -339,13 +339,12 @@ j = json.loads(re.sub(r'(^|\s)/\*.*?\*/', '', open(sys.argv[1], 'r').read(),
                       flags=re.DOTALL))
 runtime = j['runtime']
 sdk = j['sdk']
-sdk_extensions = j['sdk-extensions']
 version = j['runtime-version']
 arch = sys.argv[2]
-deps = [runtime, sdk]
-deps += sdk_extensions
-for dep in deps:
-  ref = '%s/%s/%s' % (dep, arch, version)
+platform_ref = '%s/%s/%s' % (runtime, arch, version)
+sdk_ref = '%s/%s/%s' % (sdk, arch, version)
+deps = [platform_ref, sdk_ref]
+for ref in deps:
   if subprocess.call(['flatpak', 'install', '--user', 'flathub', ref]) != 0:
       sys.exit(1)
   if subprocess.call(['flatpak', 'update', '--user', ref]):
