Use the official repo in the sample config

--- a/config.json.sample
+++ b/config.json.sample
@@ -2,7 +2,7 @@
     "buildbot-port": 8010,
     "github-uri": "https://github.com/flathub/",
     "buildbot-uri": "http://localhost:8010/",
-    "flathub-repo": "file:///vcs/gnome/flathub/repo",
+    "flathub-repo": "https://flathub.org/repo/",
     "flathub-repo-path": "/vcs/gnome/flathub/repo",
     "flathub-branch": "stable",
     "flathub-gpg-homedir": "/vcs/gnome/flathub/gpg",
