Use --delete-build-dirs to clean up failed builds
We have no use for failed build dirs, so delete them.

--- a/master.cfg
+++ b/master.cfg
@@ -358,7 +358,7 @@ for ref in deps:
     steps.ShellCommand(name='build manifest',
                        haltOnFailure=True,
                        timeout=3000,
-                       command=['flatpak-builder', '-v', '--force-clean', '--sandbox',
+                       command=['flatpak-builder', '-v', '--force-clean', '--sandbox', '--delete-build-dirs',
                                 util.Property('extra-fb-args'), '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
                                 '--default-branch', flathub_branch,
                                 '--subject', util.Interpolate('Build %(prop:appid)s at %(prop:revision)s'),
